tests/neg-custom-args/fatal-warnings/i9751.scala
def f(): Unit = {
  () // error
  ()
}

inline def g(): Unit = {
  () // error
  ()
}
